style.css
 /* * -- BASE STYLES -- */

body {
    color: #526066;
    position: relative;
    padding-bottom: 58px;
    min-height: 100vh;
}
a {
    display: flex;
    justify-content: flex-start;
}

h1 {
    color: black;
}

h2 {
    letter-spacing: 0.25em;
    text-transform: uppercase;
    font-weight: 600;
    position: absolute;
    color: black;
    font-weight: 500;
    text-shadow: 0 1px 1px white;
    margin-top: 60px;
}

h3 {
    display: flex;
    justify-content: flex-start;
    letter-spacing: 0.25em;
    text-transform: uppercase;
    font-weight: 600;
}

h4 {
    display: flex;
    justify-content: flex-start;
}

p {
    line-height: 1.6em;
}

.booksH3 {
    display: flex;
    justify-content: CENTER;
    padding:20px;

}

.bookLink {
    color: grey;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #2f3640;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s;
}

/*
 * -- Layout Styles --
 */
.l-content {
    margin: 0 auto;
}

.l-box {
    padding: 0.5em 2em;
}

#jobResult {
    padding: 80px;
}
/*
 * -- MENU STYLES --
 * Make the menu have a very faint box-shadow.
 */
.pure-menu {
    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
}


/*
 * -- BANNER --
 * The top banner with the headings. By using a combination
 * of `display: table;` and `display: table-cell;`, we can
 * vertically center the text.
 */

.banner {
    background: transparent url('https://images.theconversation.com/files/191713/original/file-20171024-30561-ph2byj.jpg?ixlib=rb-1.1.0&rect=0%2C0%2C6440%2C1751&q=45&auto=format&w=926&fit=clip') 0 0 no-repeat fixed;
    text-align: center;
    
    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='https://images.theconversation.com/files/191713/original/file-20171024-30561-ph2byj.jpg?ixlib=rb-1.1.0&rect=0%2C0%2C6440%2C1751&q=45&auto=format&w=926&fit=clip', sizingMethod='scale');

    height: 200px;
    width: 100%;
    margin-bottom: 3em;
    display: table;
}

    .banner-head {
        display: table-cell;
        vertical-align: middle;
        margin-bottom: 0;
        font-size: 2em;
        color: black;
        font-weight: 500;
        text-shadow: 0 4px 4px white;
    }



/*
 resultsDiv Styling
 */

.resultsDiv {
    margin-bottom: 3.125em;
    text-align: center;
    max-width: 980px;
    margin: 0 auto;
}

/* /* 
 * -- FOOTER  -- */


.footer {
    background: #111;
    color: #888;
    text-align: center;
    padding: 20px;
    position: absolute;
    bottom: 0;
    width: 100%;
}
    .footer a {
        color: #ddd;
    }
/* animated search bar */
.searchMain {
    position: relative;
}

.searchBox {
    position: absolute;
    top: 30%;
    left: 30%;
    transform:  translate(-50%,50%);
    background: #2f3640;
    height: 40px;
    border-radius: 40px;
    padding: 10px;

}

.box2 {
    position: absolute;
    top: 30%;
    left: 70%;
    transform:  translate(-50%,50%);
    background: #2f3640;
    height: 40px;
    border-radius: 40px;
    padding: 10px;

}

.searchBox:hover > .searchInput {
    width: 240px;
    padding: 0 6px;
}

.searchBox:hover > .searchButton {
  background: white;
  color : #2f3640;
}

.searchButton {
    color: white;
    float: right;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #2f3640;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s;
}

.searchInput {
    border:none;
    background: none;
    outline:none;
    float:left;
    padding: 0;
    color: white;
    font-size: 16px;
    transition: 0.4s;
    line-height: 40px;
    width: 0px;

}

/* ANIMATED CAROUSEL ********************************/
#booksresult {
    box-sizing: border-box;
    /* height: 100%; */
    overflow: hidden;
    display: flex;
    
    align-items: center;
    justify-content: center;
    background: linear-gradient(to bottom, #74ABE2, #5563DE);
    font-family: 'Ropa Sans', sans-serif;
    
  }
  
  .slider {
    width: 100%;
    text-align: center;
    overflow: hidden;
  }
  
  .slides {
    display: flex;
   
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    
    
    scroll-snap-points-x: repeat(300px);
    scroll-snap-type: mandatory;
   
  }
  .slides::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }
  .slides::-webkit-scrollbar-thumb {
    background: black;
    border-radius: 10px;
  }
  .slides::-webkit-scrollbar-track {
    background: transparent;
  }
  .slides > div {
    scroll-snap-align: start;
    flex-shrink: 0;
    width: 100%;
    height: 300px;
    margin-right: 50px;
    border-radius: 10px;
    background: #eee;
    transform-origin: center center;
    transform: scale(1);
    transition: transform 0.5s;
    position: relative;
    
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 15px;
  }

  .bookDetails {
    padding: 0 100px 0 100px;
    text-align: left;
  }
  .bookDetails img {
    padding-left: 30px;
    padding-top: 30px;
    width: 20%;
    height: 80%;
  }

  .author-info {
    background: rgba(0, 0, 0, 0.75);
    color: white;
    padding: 0.75rem;
    text-align: center;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    margin: 0;
  }
  .author-info a {
    color: white;
  }
  img {
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  
  .slider > a {
    display: inline-flex;
    width: 1.5rem;
    height: 1.5rem;
    background: white;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    margin: 0 0 0.5rem 0;
    position: relative;
  }
  .slider > a:active {
    top: 1px;
  }
  .slider > a:focus {
    background: #000;
  }
  

/* NOT SURE WHAT THIS IS FOR **************** */
  /* Don't need button navigation
  @supports (scroll-snap-type) {
    .slider > a {
      display: none;
    }
  }
   */

  
  
  
  
  /* Resources */


@media (max-width: 620px) {

.searchBox:hover > .searchInput {
    width: 150px;
    padding: 0 6px;
}
}


/*
 * -- TABLET MEDIA QUERIES --
 * On tablets, we want to slightly adjust the size of the banner
 * text and add some vertical space between the various pricing tables
 */
@media(min-width: 767px) {

    .banner-head {
        font-size: 4em;
    }
    .searchBox:hover > .searchInput {
        width: 150px;
        padding: 0 6px;
    }

}

/*
 * -- PHONE MEDIA QUERIES --
 * On phones, we want to reduce the height and font-size of the banner further
 */
@media (min-width: 480px) {
    .banner {
        height: 400px;
    }
    .banner-head {
        font-size: 4em;
    }
}

